style.css
/* ... */
a {
    text-decoration: none;
    transition: none;
    scroll-behavior: auto;
    cursor: pointer;

}

a:focus {
    outline-color: #FF007A;
    outline-style: dashed;
    border: none;
}

p {
    font-style: italic;
}

.inter-regular {
    font-family: "Inter", sans-serif;
    font-weight: 400;
}

.inter-italic {
    font-family: "Inter", sans-serif;
    font-style: italic;
}

.inter-bold {
    font-family: "Inter", sans-serif;
    font-weight: bold;
    font-style: normal;
}

input:focus-visible {
    outline-color: #FF007A;
    outline-style: dashed;
    border: none;
}

button {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 52px;
    padding: 14px 24px;
    font-family: "Inter", sans-serif;
    background-color: rgba(0, 0, 0);
    font-size: 16px;
    color: #DADADA;
    font-style: italic;
    border-style: none;
    outline-color: transparent;
    outline-style: transparent;

}

button:hover {
    background-color: hsl(0, 0%, 16%);
    cursor: pointer;
}

button:focus-visible {
    outline-color: #FF007A;
    outline-style: dashed;
}

button:active {
    outline-color: transparent;
    outline-style: transparent;
}



.content-container {
    margin: 0 auto;
    height: 100%;

}

.header {
    box-sizing: border-box;
    background-color: #DADADA;
    height: 456px;
    width: 100vw;
    padding-top: 52px;
    padding-bottom: 52px;
}

.header_content-wrapper {
    display: flex;
    height: inherit;
    flex-direction: column;
    justify-content: space-between;

}

.navigation {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    justify-content: space-between;
    width: 100%;
}

.navigation p {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
}

.navigation_buttons {
    display: flex;
    gap: 4px;

}

.navigation_buttons button {
    padding: 14px 24px 14px 24px;

}

.navigation_button::after {
    position: relative;
    left: 28px;
    content: "";
    width: 4px;
    height: 2px;
    background-color: #000000;
}

.navigation_button::after:nth-child(1) {
    display: none;
}

.mobileNavWithHamburgerMenu {
    display: none;
    z-index: 1;
}

/* Navigation that is for screens wider that tablet */
.stickyNavPopUp {
    display: none;
    position: fixed;
    top: 8px;
    left: 8px;
    right: 8px;
    animation: navigationSliderTopToBottom 0.5s ease-in;
    animation-direction: normal;
    z-index: 1;
}

.stickyNavPopUpWrapper {
    height: 64px;
    border-radius: 8px;
    background-color: #FFE27C;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.stickyNavPopUpWrapper button {
    display: flex;
    padding: 0;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 128px;
    background-color: transparent;
    color: #000000;
    font-style: italic;
    border-style: none;
    cursor: pointer;
}

.stickyNavPopUpWrapper button:hover {
    background-color: #EBCE68;
}

.stickyNavPopUpWrapper button:last-child:hover {
    border-top-right-radius: inherit;
    border-bottom-right-radius: inherit;
    background-color: #EBCE68;
}

.stickyNavPopUpLogoWithName {
    padding: 0px 72px 0px 16px;
}

.burgerMenuDivider {
    display: block;
    height: 52px;
    content: "";
    width: 1px;
    background-color: black;
}

.title {
    margin-top: 128px;
    margin-bottom: 24px;
    font-family: "Archivo Black", sans-serif;
    font-size: 128px;
}

.projects_showcase {
    display: flex;
    flex-direction: column;
    gap: 1px;
}

.project {
    height: 400px;
    display: flex;
    align-items: center;
    z-index: -1;
    cursor: pointer;
}


.projectWrapperButton {
    color: #000000;
    padding: 0;
    z-index: 0;
    background-color: transparent;
}

.projectWrapperButton:hover {
    background-color: transparent;
}

.projectWrapperButton:focus-visible {
    outline-color: #FF007A;
    outline-style: dashed;
}

.project:hover {
    opacity: 0.9;
}

.projectWrapperButton:active {
    outline-color: transparent;
    outline-style: none
}

.projectWrapperButton:focus {
    outline-color: transparent;
    outline-style: none
}

.project img {
    height: 400px;
    object-fit: cover;
}

.decorLineForProject {
    display: flex;
    align-items: center;
    content: "";
    height: 1px;
    background-color: #010101;
    width: 201px;
}

.project2 {
    flex-direction: row-reverse;
}

.projectText {
    font-style: italic;
    font-size: 16px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    width: 143px;
    line-height: 24px;
}

.listing {
    display: inline-block;
    justify-content: center;
    padding-left: 24px;
    padding-top: 26px;
    border-right: 1px solid black;
    border-top: 1px solid black;
    flex: 1 1 0px;
}

.listing p {
    font-family: "Inter", sans-serif;
    font-style: italic;
    font-size: 16px;
    margin-top: 36px;
    margin-bottom: 26px;
}

.we_do_offer_listing {
    border-left: 1px solid black;
    border-bottom: 1px solid black;
}

.we_do_offer_upper_row {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.we_do_offer_lower_row {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.personDetails {
    font-style: italic;
    line-height: 24px;
}

.teamPictures {
    display: flex;
    flex-direction: row;
    align-items: center;
    font-size: 16px;
    gap: 4px;
}

.teamPictures2 {
    flex-direction: row-reverse;
}

#teamPic1 {
    background-image: url(./img/teamPic1.svg);
}



.decorLineForTeamPic {
    display: flex;
    align-items: center;
    content: "";
    flex-grow: 1;
    height: 1px;
    background-color: #010101;
}

input::placeholder {
    font-style: italic;
    text-align: center;
    color: #8D8D8D;
}

textarea {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
/* ... */

